// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cards/ResourceCard default 1`] = `
<article
  className="Card Accordion ResourceCard"
>
  <div
    className="headingContainer"
  >
    <div
      className="header"
    >
      <h5
        className="resourceName"
      >
        <a
          className="link"
          href="https://google.com/"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          Javascript for Dummies
          <span
            className="ScreenReaderOnly"
            data-testid="SCREEN_READER_ONLY"
          >
            Opens in new window
          </span>
        </a>
      </h5>
      <div
        className="votingBlock desktopVotingBlock"
      >
        <span
          className="votingBlockHeader"
        >
          Useful?
        </span>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={false}
            className="voteButton"
            data-testid="UPVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Yes
            </span>
            <svg
              className="icon"
            />
          </button>
          <span
            className="voteCount"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of upvotes:
            </span>
            0
          </span>
        </div>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={false}
            className="voteButton"
            data-testid="DOWNVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              No
            </span>
            <svg
              className="icon"
            />
          </button>
          <span
            className="voteCount"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of downvotes:
            </span>
            0
          </span>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-controls="content-Javascript for Dummies"
    aria-expanded={false}
    className="accordionToggleButton"
    data-testid="Accordion Toggle Button"
    id="accordion-control-Javascript for Dummies"
    onClick={[Function]}
    type="button"
  >
    <span
      className="ScreenReaderOnly"
      data-testid="SCREEN_READER_ONLY"
    >
      Show more
    </span>
    <svg
      className="icon"
    />
  </button>
  <section
    aria-hidden={true}
    className="accordionContent invisible"
    data-testid="Accordion Content"
    id="content-Javascript for Dummies"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="content"
    >
      <p
        className="descriptionText"
      >
        
      </p>
      <div
        className="votingBlock mobileVotingBlock"
      >
        <span
          className="votingBlockHeader"
        >
          Useful?
        </span>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={false}
            className="voteButton"
            data-testid="UPVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Yes
            </span>
            <svg
              className="icon"
            />
          </button>
          <span
            className="voteCount"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of upvotes:
            </span>
            0
          </span>
        </div>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={false}
            className="voteButton"
            data-testid="DOWNVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              No
            </span>
            <svg
              className="icon"
            />
          </button>
          <span
            className="voteCount"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of downvotes:
            </span>
            0
          </span>
        </div>
      </div>
    </div>
  </section>
</article>
`;

exports[`Storyshots Cards/ResourceCard with long name 1`] = `
<article
  className="Card Accordion ResourceCard"
>
  <div
    className="headingContainer"
  >
    <div
      className="header"
    >
      <h5
        className="resourceName"
      >
        <a
          className="link"
          href="https://google.com/"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          Javascript for Super Duper Dummies
          <span
            className="ScreenReaderOnly"
            data-testid="SCREEN_READER_ONLY"
          >
            Opens in new window
          </span>
        </a>
      </h5>
      <div
        className="votingBlock desktopVotingBlock"
      >
        <span
          className="votingBlockHeader"
        >
          Useful?
        </span>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={false}
            className="voteButton"
            data-testid="UPVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Yes
            </span>
            <svg
              className="icon"
            />
          </button>
          <span
            className="voteCount"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of upvotes:
            </span>
            12
          </span>
        </div>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={true}
            className="voteButton active"
            data-testid="DOWNVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              No
            </span>
            <svg
              className="icon active"
            />
          </button>
          <span
            className="voteCount active"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of downvotes:
            </span>
            25
          </span>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-controls="content-Javascript for Super Duper Dummies"
    aria-expanded={false}
    className="accordionToggleButton"
    data-testid="Accordion Toggle Button"
    id="accordion-control-Javascript for Super Duper Dummies"
    onClick={[Function]}
    type="button"
  >
    <span
      className="ScreenReaderOnly"
      data-testid="SCREEN_READER_ONLY"
    >
      Show more
    </span>
    <svg
      className="icon"
    />
  </button>
  <section
    aria-hidden={true}
    className="accordionContent invisible"
    data-testid="Accordion Content"
    id="content-Javascript for Super Duper Dummies"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="content"
    >
      <p
        className="descriptionText"
      >
        Trust fund post-ironic austin offal. Asymmetrical knausgaard selfies, butcher celiac brunch brooklyn palo santo iceland gochujang chicharrones waistcoat plaid.
      </p>
      <div
        className="votingBlock mobileVotingBlock"
      >
        <span
          className="votingBlockHeader"
        >
          Useful?
        </span>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={false}
            className="voteButton"
            data-testid="UPVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Yes
            </span>
            <svg
              className="icon"
            />
          </button>
          <span
            className="voteCount"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of upvotes:
            </span>
            12
          </span>
        </div>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={true}
            className="voteButton active"
            data-testid="DOWNVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              No
            </span>
            <svg
              className="icon active"
            />
          </button>
          <span
            className="voteCount active"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of downvotes:
            </span>
            25
          </span>
        </div>
      </div>
    </div>
  </section>
</article>
`;

exports[`Storyshots Cards/ResourceCard with truncated description 1`] = `
<article
  className="Card Accordion ResourceCard"
>
  <div
    className="headingContainer"
  >
    <div
      className="header"
    >
      <h5
        className="resourceName"
      >
        <a
          className="link"
          href="https://google.com/"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          Javascript for Dummies
          <span
            className="ScreenReaderOnly"
            data-testid="SCREEN_READER_ONLY"
          >
            Opens in new window
          </span>
        </a>
      </h5>
      <div
        className="votingBlock desktopVotingBlock"
      >
        <span
          className="votingBlockHeader"
        >
          Useful?
        </span>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={true}
            className="voteButton active"
            data-testid="UPVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Yes
            </span>
            <svg
              className="icon active"
            />
          </button>
          <span
            className="voteCount active"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of upvotes:
            </span>
            12
          </span>
        </div>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={false}
            className="voteButton"
            data-testid="DOWNVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              No
            </span>
            <svg
              className="icon"
            />
          </button>
          <span
            className="voteCount"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of downvotes:
            </span>
            25
          </span>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-controls="content-Javascript for Dummies"
    aria-expanded={false}
    className="accordionToggleButton"
    data-testid="Accordion Toggle Button"
    id="accordion-control-Javascript for Dummies"
    onClick={[Function]}
    type="button"
  >
    <span
      className="ScreenReaderOnly"
      data-testid="SCREEN_READER_ONLY"
    >
      Show more
    </span>
    <svg
      className="icon"
    />
  </button>
  <section
    aria-hidden={true}
    className="accordionContent invisible"
    data-testid="Accordion Content"
    id="content-Javascript for Dummies"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="content"
    >
      <p
        className="descriptionText"
      >
        Cliche umami truffaut scenester vice bespoke. Lomo copper mug seitan raw denim tousled coloring book kinfolk irony venmo fam austin. Pitchfork vape pork belly, fixie flannel enamel pin cold-pressed echo park. Organic sriracha waistcoat austin keytar, gentrify cardigan mumblecore PBR&B tumblr normcore meggings scenester. Enamel pin kitsch butcher, synth etsy next level gluten-free. Put a bird on it vexillologist XOXO iPhone wolf coloring book chicharrones 8-bit VHS unicorn. Leggings viral taxidermy keytar, cray schlitz hot chicken kogi truffaut art party XOXO.
      </p>
      <div
        className="votingBlock mobileVotingBlock"
      >
        <span
          className="votingBlockHeader"
        >
          Useful?
        </span>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={true}
            className="voteButton active"
            data-testid="UPVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Yes
            </span>
            <svg
              className="icon active"
            />
          </button>
          <span
            className="voteCount active"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of upvotes:
            </span>
            12
          </span>
        </div>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={false}
            className="voteButton"
            data-testid="DOWNVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              No
            </span>
            <svg
              className="icon"
            />
          </button>
          <span
            className="voteCount"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of downvotes:
            </span>
            25
          </span>
        </div>
      </div>
    </div>
  </section>
</article>
`;

exports[`Storyshots Cards/ResourceCard with zero up/downvotes 1`] = `
<article
  className="Card Accordion ResourceCard"
>
  <div
    className="headingContainer"
  >
    <div
      className="header"
    >
      <h5
        className="resourceName"
      >
        <a
          className="link"
          href="https://google.com/"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          Javascript for Super Duper Dummies
          <span
            className="ScreenReaderOnly"
            data-testid="SCREEN_READER_ONLY"
          >
            Opens in new window
          </span>
        </a>
      </h5>
      <div
        className="votingBlock desktopVotingBlock"
      >
        <span
          className="votingBlockHeader"
        >
          Useful?
        </span>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={false}
            className="voteButton"
            data-testid="UPVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Yes
            </span>
            <svg
              className="icon"
            />
          </button>
          <span
            className="voteCount"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of upvotes:
            </span>
            0
          </span>
        </div>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={false}
            className="voteButton"
            data-testid="DOWNVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              No
            </span>
            <svg
              className="icon"
            />
          </button>
          <span
            className="voteCount"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of downvotes:
            </span>
            0
          </span>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-controls="content-Javascript for Super Duper Dummies"
    aria-expanded={false}
    className="accordionToggleButton"
    data-testid="Accordion Toggle Button"
    id="accordion-control-Javascript for Super Duper Dummies"
    onClick={[Function]}
    type="button"
  >
    <span
      className="ScreenReaderOnly"
      data-testid="SCREEN_READER_ONLY"
    >
      Show more
    </span>
    <svg
      className="icon"
    />
  </button>
  <section
    aria-hidden={true}
    className="accordionContent invisible"
    data-testid="Accordion Content"
    id="content-Javascript for Super Duper Dummies"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="content"
    >
      <p
        className="descriptionText"
      >
        Trust fund post-ironic austin offal. Asymmetrical knausgaard selfies, butcher celiac brunch brooklyn palo santo iceland gochujang chicharrones waistcoat plaid.
      </p>
      <div
        className="votingBlock mobileVotingBlock"
      >
        <span
          className="votingBlockHeader"
        >
          Useful?
        </span>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={false}
            className="voteButton"
            data-testid="UPVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Yes
            </span>
            <svg
              className="icon"
            />
          </button>
          <span
            className="voteCount"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of upvotes:
            </span>
            0
          </span>
        </div>
        <div
          className="voteInfo"
        >
          <button
            aria-pressed={false}
            className="voteButton"
            data-testid="DOWNVOTE_BUTTON"
            onClick={[Function]}
            type="button"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              No
            </span>
            <svg
              className="icon"
            />
          </button>
          <span
            className="voteCount"
          >
            <span
              className="ScreenReaderOnly"
              data-testid="SCREEN_READER_ONLY"
            >
              Number of downvotes:
            </span>
            0
          </span>
        </div>
      </div>
    </div>
  </section>
</article>
`;
